<resources>
    <string name="_super_forum">"Only for 42's students (www.42.fr), this app is available for all the campus :)

The app is an unofficial Intra 42 client for Android platforms. It's built in JAVA and use official Android SDK.

Download it : [https://play.google.com/store/apps/details?id=com.paulvarry.intra42](https://play.google.com/store/apps/details?id=com.paulvarry.intra42)

View sources : [https://github.com/pvarry/intra42](https://github.com/pvarry/intra42)

## Features :
- Keep informed on events and sync your calendar
- Be notified on events and graduations
- View project and graduations
- View users profile and project
- Comment on forum
- Watch video on e-learning

All feature requests and contributions are welcome!

Useful tools :

&gt; [pdf viewer](https://play.google.com/store/apps/details?id=com.google.android.apps.pdfviewer)

&gt; [vlc](https://play.google.com/store/apps/details?id=org.videolan.vlc) for playing e-learning videos.

## Contribute

You can Contribute to this project by fixing bugs or add missing features.

### Edit Source code

Sources : [https://github.com/pvarry/intra42](https://github.com/pvarry/intra42)

To run the app locally you have to :
- Use Android Studio as IDE.
- Create a application on https://profile.intra.42.fr/oauth/applications
- Duplicate file on `app/src/debug/java/com/paulvarry/intra42/Credential.java.sample` and fill up with yours credentials.

### Edit Strings ressources

If you find grammatical mistakes or if you want to translate this app, you can do it with [POEditor](https://poeditor.com/join/project/hDRec5Vk8b).

## Screenshot

![home](https://lh3.googleusercontent.com/kVno0ZG2ZQHiG3NXgKsN6pZ7Bx2L18wT54_OCfLJejKYPecyllImXpNQ0KWXRXMFJpE=h310-rw)

![Galaxy](https://lh3.googleusercontent.com/8sl1WUfwK0buyA1BN1uxH0OmhJOfByZfXtJ_u1sVFBPjYPeCQgqin0DnrnNhNwfkW3ot=h310-rw)

![Cluster Map](https://lh3.googleusercontent.com/o5xlA1lXr1qoYWC81RUAg_e4jaWpFg9LoU5kStmR9PuXatqKnUvY8QJ3a2L4M41RKtxd=h310-rw)

![Event](https://lh3.googleusercontent.com/EvbKktad0gKoUU4KBIo4x9eglSHSLlSIfOMgFbIZfIE3Pp6N2ZkguYLYM27nFZOwfg=h310-rw)

![Projects](https://lh3.googleusercontent.com/WWOLxkqUmtg51B5DC0UlJzj1jD-9ju1bDTPcuLd88YW-wFcuHlUDrRcloiOIKpQURZk=h310-rw)

![Projects](https://lh3.googleusercontent.com/9vEGqxY4duq8rK4VeDFgB8rU6JC_8E3kzX1Cl0-jrc3amrPoqFjHwZLTLKpSRdShXkXT=h310-rw)

Disclaimer : This code is in no way affiliated with, authorised, maintained, sponsored or endorsed by 42. This is an independent and unofficial Android app."</string>
    <string name="_super_store_full_description">"Only for 42's students (www.42.fr)

This app is an unofficial Intra 42 client for Android platforms. It's built in JAVA and use official Android SDK.

Features :
- Keep informed on events and sync your calendar
- Be notified on events and graduations
- View project and graduations
- View users profile and project
- Comment on forum
- Watch video on e-learning
- All feature requests and contributions are welcome!

More informations : https://forum.intra.42.fr/topics/9650/messages/last
https://github.com/pvarry/intra42

Disclaimer : This code is in no way affiliated with, authorised, maintained, sponsored or endorsed by 42. This is an independent and unofficial Android app."</string>
    <string name="_super_store_short_description">"Unofficial, free and open-source 42's intranet App."</string>
    <string name="_super_store_title">"Intra 42"</string>
    <string name="about_app_summary">"Unofficial, free and open-source App"</string>
    <string name="about_content">"Access your intra with a native app.
Contact me on Slack or mail (pvarry)"</string>
    <string name="about_library_list">"Library list"</string>
    <string name="about_on_github">"on Github"</string>
    <string name="about_poeditor">"Project on POEditor"</string>
    <string name="about_report_bug">"Report bug"</string>
    <string name="about_show_introduction">"Show Introduction"</string>
    <string name="about_version">"Version"</string>
    <string name="about_view_source">"View source"</string>
    <string name="accessibility_navigation_drawer_close">"Close navigation drawer"</string>
    <string name="accessibility_navigation_drawer_open">"Open navigation drawer"</string>
    <string name="app_name">"Intra 42"</string>
    <string name="bookings_correct_login">"You will review _login_'s project at _date_."</string>
    <string name="bookings_correct_login_project">"You will review _login_ on _project_ at _date_."</string>
    <string name="bookings_correct_somebody">"You will review somebody's code at _date_."</string>
    <string name="bookings_corrected_by">"Your _project_'s will be reviewed at _date_."</string>
    <string name="bookings_corrected_by_login">"Your _project_'s will be reviewed by _login_ at _date_."</string>
    <string name="campus">"Campus"</string>
    <string name="cancel">"Cancel"</string>
    <string name="cantina_menu_fremont_only">"Cantina Menu"</string>
    <string name="cluster_map_contribute_button_edit_layout">"edit map"</string>
    <string name="cluster_map_contribute_button_edit_metadata">"edit metadata"</string>
    <string name="cluster_map_contribute_dialog_add_action_column_left">"Add column on left"</string>
    <string name="cluster_map_contribute_dialog_add_action_column_right">"Add column on right"</string>
    <string name="cluster_map_contribute_dialog_add_action_row_bottom">"Add row on bottom"</string>
    <string name="cluster_map_contribute_dialog_add_action_row_top">"Add row on top"</string>
    <string name="cluster_map_contribute_dialog_controller_action_column">"Actions for this column"</string>
    <string name="cluster_map_contribute_dialog_controller_action_delete_column">"Delete this column"</string>
    <string name="cluster_map_contribute_dialog_controller_action_delete_row">"Delete this row"</string>
    <string name="cluster_map_contribute_dialog_controller_action_scale_column">"Set column size"</string>
    <string name="cluster_map_contribute_dialog_controller_action_scale_row">"Set row size"</string>
    <string name="cluster_map_contribute_dialog_controller_title_row">"Actions for this row"</string>
    <string name="cluster_map_contribute_dialog_delete_message_col">"You are going to delete column on x=%d, this action can't be undo"</string>
    <string name="cluster_map_contribute_dialog_delete_message_row">"You are going to delete row on y=%d, this action can't be undo"</string>
    <string name="cluster_map_contribute_dialog_delete_title">"Are you sure to delete this row/column ?"</string>
    <string name="cluster_map_contribute_dialog_location_layout_corridor">"corridor"</string>
    <string name="cluster_map_contribute_dialog_location_layout_host_hint">"host"</string>
    <string name="cluster_map_contribute_dialog_location_layout_user">"user"</string>
    <string name="cluster_map_contribute_dialog_location_layout_wall">"wall"</string>
    <string name="cluster_map_contribute_dialog_location_title">"Edit: _x_,_y_"</string>
    <string name="cluster_map_contribute_dialog_location_title_host">"Edit: _x_,_y_ (_host_)"</string>
    <string name="cluster_map_contribute_dialog_metadata_layout_comment">"Comment"</string>
    <string name="cluster_map_contribute_dialog_metadata_layout_full_name">"Full name"</string>
    <string name="cluster_map_contribute_dialog_metadata_layout_location_prefix">"Location prefix"</string>
    <string name="cluster_map_contribute_dialog_metadata_layout_location_prefix_info">"Info: Location prefix is the beginning of all the host name on this cluster."</string>
    <string name="cluster_map_contribute_dialog_metadata_layout_position">"Position of this cluster on the list"</string>
    <string name="cluster_map_contribute_dialog_metadata_layout_short_name">"Short name"</string>
    <string name="cluster_map_contribute_dialog_metadata_title">"Edit cluster metadata"</string>
    <string name="cluster_map_contribute_dialog_scale_layout_info">"By setting a scale on a row or a column, you will reduce or increase his size."</string>
    <string name="cluster_map_contribute_dialog_scale_layout_scale_hint">"scale"</string>
    <string name="cluster_map_contribute_dialog_scale_title">"Edit scale of this row/column"</string>
    <string name="cluster_map_contribute_dialog_time_up_message">"Lock will soon time up, you may consider saves your changes as soon as possible."</string>
    <string name="cluster_map_contribute_dialog_time_up_title">"Time up"</string>
    <string name="cluster_map_contribute_error_data_locked">"Operation can't be finished, data locked"</string>
    <string name="cluster_map_contribute_error_fail_to_retrieve_data_response">"Operation can't be finished, failed to retrieve data"</string>
    <string name="cluster_map_contribute_explanations">"The cluster map can be edited by multiples users as the save time, you may see dynamics changes while you editing.

Ready to be publish : When this flag is set, the cluster will be manually publish on the next update of the app.

Cluster orientation :
    - All clusters of a Building must have the same orientation.
    - The north is not necessarily on the top, it is preferable to have the entrance of the Cluster on the bottom."</string>
    <string name="cluster_map_contribute_locked_indicator">"Cluster locked by _user_ at _time_.
You will be able to edit this cluster at _timeFuture_."</string>
    <string name="cluster_map_contribute_ready_publish">"This cluster is ready to be published"</string>
    <string name="cluster_map_contribute_toolbar_info_minute_second">"Cluster lock for: _minute_ m and _second_ s"</string>
    <string name="cluster_map_contribute_toolbar_info_second">"Cluster lock for: _second_ s"</string>
    <string name="cluster_map_contribute_toolbar_info_too_late">"Too late, you can't save your changes"</string>
    <string name="cluster_map_contribute_warning_empty_host">"Warning: host name need to be filled"</string>
    <string name="cursus">"Cursus"</string>
    <string name="done">"Done"</string>
    <string name="forum_tags">"Tags"</string>
    <string name="forum_topic_content">"Content"</string>
    <string name="menu_action_filter">"filter"</string>
    <string name="menu_action_open_intra">"Show web version"</string>
    <string name="menu_action_search">"Search"</string>
    <string name="menu_action_settings">"Settings"</string>
    <string name="menu_action_share">"Share"</string>
    <string name="pref_header_network">"Network"</string>
    <string name="pref_header_notifications">"Notifications"</string>
    <string name="pref_header_theme">"Theme"</string>
    <string name="pref_network_profile_pic_size_title">"Profile picture size"</string>
    <string name="pref_theme_info_need_restart">"You need to restart app to update theme"</string>
    <string name="pref_theme_switch_action_bar_background">"Display image on App Bar background"</string>
    <string name="pref_theme_switch_dark_theme">"Use dark theme"</string>
    <string name="pref_theme_title_change_theme">"Set theme"</string>
    <string name="pref_title_network_over_cellular_fast">"Over fast cellular network"</string>
    <string name="pref_title_network_over_cellular_slow">"Over slow cellular network"</string>
    <string name="pref_title_network_over_wifi">"Over wifi"</string>
    <string name="search_by">"Search by"</string>
    <string name="soon">"Soon"</string>
    <string name="sort_by">"Sort by"</string>
    <string name="title">"Title"</string>
    <string name="user_patronages_no_patron">"NO PATRON"</string>
    <string name="user_patronages_no_patroning">"NOT PATRONING ANYONE"</string>
    <string name="user_patronages_patron">"Patron"</string>
    <string name="user_patronages_patroning">"Patroning"</string>
    <string name="user_pool">"Piscine"</string>
    <string name="value">"Value"</string>
</resources>