<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:icon="@drawable/ic_info_black_24dp"
        android:key="about"
        android:selectable="false"
        android:summary="@string/pref_theme_info_need_restart" />

    <ListPreference
        android:defaultValue="default"
        android:entries="@array/pref_theme_list_titles"
        android:entryValues="@array/pref_theme_list_values"
        android:key="list_preference_theme"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_theme_title_change_theme" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="switch_theme_actionbar_enable_background"
        android:title="@string/pref_theme_switch_action_bar_background" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_theme_dark_theme"
        android:title="@string/pref_theme_switch_dark_theme" />

</PreferenceScreen>
