<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="16dp">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButtonUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cluster_map_contribute_dialog_location_layout_user" />

        <RadioButton
            android:id="@+id/radioButtonWall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cluster_map_contribute_dialog_location_layout_wall" />

        <RadioButton
            android:id="@+id/radioButtonCorridor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cluster_map_contribute_dialog_location_layout_corridor" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/cluster_map_contribute_dialog_location_layout_host_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextHost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>