<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerKind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <com.paulvarry.intra42.adapters.CompletionViewTags
        android:id="@+id/completion_view_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forum_tags" />

    <com.paulvarry.intra42.adapters.CompletionViewCursus
        android:id="@+id/completion_view_cursus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cursus" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/editTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forum_topic_content"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>