<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.user.UserPatronagesFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPatron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/user_patronages_patron"
                android:textColor="?colorAccent"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewPatronNone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center_horizontal"
                android:text="@string/user_patronages_no_patron"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/listViewPatron"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewPatroning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/user_patronages_patroning"
                android:textColor="?colorAccent"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewPatroningNone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center_horizontal"
                android:text="@string/user_patronages_no_patroning"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/listViewPatroning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>